tests/unit/operations/comparissons/compilation_errors/error_4.rb
0 >= nil # TypeError: NilClass can't be coerced into Fixnum
